<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/altbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="292dp"
        android:src="@drawable/bunny" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginBottom="2sp"
        android:text="@string/greeting"
        android:fontFamily="casual"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/greeting"
        android:layout_marginBottom="2sp"
        android:fontFamily="casual"
        android:text="@string/question1"
        android:textSize="36sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_marginLeft="20sp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_marginBottom="2sp"
            android:fontFamily="casual"
            android:text="@string/squat"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioButton1"
            android:text="@string/bench"
            android:fontFamily="casual"
            android:layout_marginBottom="2sp"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioButton2"
            android:text="@string/deadlift"
            android:fontFamily="casual"
            android:layout_marginBottom="2sp"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioButton3"
            android:text="@string/accessory"
            android:fontFamily="casual"
            android:textSize="30sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/squatMenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:visibility="invisible"
        android:layout_marginLeft="20sp">

        <RadioButton
            android:id="@+id/squatButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_marginBottom="2sp"
            android:fontFamily="casual"
            android:text="@string/front_squat"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/squatButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/squatButton1"
            android:text="@string/back_squat"
            android:fontFamily="casual"
            android:layout_marginBottom="2sp"
            android:textSize="30sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/squatMenu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:visibility="invisible"
        android:layout_marginLeft="20sp">

        <RadioButton
            android:id="@+id/squatButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_marginBottom="2sp"
            android:fontFamily="casual"
            android:text="@string/high_bar"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/squatButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/squatButton3"
            android:text="@string/low_bar"
            android:fontFamily="casual"
            android:layout_marginBottom="2sp"
            android:textSize="30sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/deadliftMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:visibility="invisible"
        android:layout_marginLeft="20sp">

        <RadioButton
            android:id="@+id/deadliftButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question"
            android:layout_marginBottom="2sp"
            android:fontFamily="casual"
            android:text="@string/sumo"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/deadliftButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deadliftButton1"
            android:text="@string/conventional"
            android:fontFamily="casual"
            android:layout_marginBottom="2sp"
            android:textSize="30sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText"
        android:visibility="invisible"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_marginLeft="20sp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:hint="@string/put_accessory_name_here"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/backarrow"
        android:visibility="invisible"
        android:layout_width="57dp"
        android:layout_height="45dp"
        android:layout_below="@id/radioGroup"
        android:layout_marginLeft="20sp"
        android:fontFamily="casual"
        android:text="@string/arrow"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/sets"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_marginBottom="2sp"
        android:layout_marginTop="10sp"
        android:text="@string/sets"
        android:fontFamily="casual"
        android:layout_marginLeft="20sp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/reps"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSets"
        android:layout_marginBottom="2sp"
        android:layout_marginTop="10sp"
        android:text="@string/reps"
        android:fontFamily="casual"
        android:layout_marginLeft="20sp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/weight"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editReps"
        android:layout_marginBottom="2sp"
        android:layout_marginTop="10sp"
        android:text="@string/weight"
        android:fontFamily="casual"
        android:layout_marginLeft="20sp"
        android:textSize="30sp" />



    <EditText
        android:id="@+id/editSets"
        android:visibility="invisible"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_toRightOf="@+id/sets"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/num_sets"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editReps"
        android:visibility="invisible"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSets"
        android:layout_toRightOf="@+id/reps"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/num_reps"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editWeight"
        android:visibility="invisible"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editReps"
        android:layout_toRightOf="@+id/weight"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/lbs"
        android:inputType="textPersonName"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/blank"
        android:visibility="invisible"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_toRightOf="@+id/backarrow"
        android:text="" />

    <Button
        android:id="@+id/save"
        android:visibility="invisible"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_below="@id/radioGroup"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@+id/blank"
        android:background="@color/colorPrimary"
        android:text="@string/save" />

    <Button
        android:id="@+id/next"
        android:visibility="invisible"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_below="@id/radioGroup"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@+id/save"
        android:background="@color/colorPrimary"
        android:text="@string/next" />

    <Button
        android:id="@+id/add"
        android:visibility="invisible"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_below="@id/sets"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="9dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_lift" />

    <TextView
        android:id="@+id/blank2"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sets"
        android:layout_toRightOf="@+id/add"
        android:text="" />

    <Button
        android:id="@+id/export"
        android:visibility="invisible"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_below="@id/sets"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@+id/blank2"
        android:background="@color/colorPrimary"
        android:text="@string/export" />



</RelativeLayout>