<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/altbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeadliftActivity"
    android:id="@+id/whole">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/bunny" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginBottom="2sp"
            android:text="@string/greeting"
            android:fontFamily="casual"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greeting"
            android:layout_marginBottom="2sp"
            android:fontFamily="casual"
            android:text="@string/question1"
            android:textSize="36sp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintLeft_toLeftOf="parent">

        <RadioGroup
            android:id="@+id/deadliftMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <RadioButton
                android:id="@+id/sumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2sp"
                android:fontFamily="casual"
                android:text="@string/sumo"
                android:textSize="30sp" />

            <RadioButton
                android:id="@+id/conventional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conventional"
                android:fontFamily="casual"
                android:layout_marginBottom="2sp"
                android:textSize="30sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="240dp"
            android:fontFamily="casual"
            android:text="@string/arrow"
            android:onClick="backClick"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/bottomBot"
            app:layout_constraintRight_toLeftOf="@+id/next"
            app:layout_constraintTop_toTopOf="@+id/bottomBot" />

        <Button
            android:id="@+id/next"
            android:layout_width="78dp"
            android:layout_height="37dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:onClick="nextClick"
            app:layout_constraintRight_toRightOf="@id/bottomBot"
            app:layout_constraintTop_toTopOf="@id/bottomBot"
            app:layout_constraintBottom_toBottomOf="@id/bottomBot"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>