<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/altbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishedActivity"
    android:id="@+id/whole">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/bunny" />

        <TextView
            android:id="@+id/confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginBottom="2sp"
            android:text="@string/confirmation"
            android:fontFamily="casual"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmation"
            android:layout_marginBottom="2sp"
            android:fontFamily="casual"
            android:text="@string/question2"
            android:textSize="36sp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <Button
            android:id="@+id/add"
            android:layout_width="78dp"
            android:layout_height="37dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_lift"
            android:onClick="addClick"
            android:layout_margin="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/export"/>

        <Button
            android:id="@+id/export"
            android:layout_width="78dp"
            android:layout_height="37dp"
            android:background="@color/colorPrimary"
            android:text="@string/export"
            android:onClick="exportClick"
            android:layout_toRightOf="@+id/add"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>